Updated swagger with path and put for individual shift
