# src/Swagger/models/IndividualShiftPatchRequest.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface IndividualShiftPatchRequest
+ */
+export interface IndividualShiftPatchRequest {
+    /**
+     * 
+     * @type {{ [key: string]: object; }}
+     * @memberof IndividualShiftPatchRequest
+     */
+    data: { [key: string]: object; };
+}
+
+export function IndividualShiftPatchRequestFromJSON(json: any): IndividualShiftPatchRequest {
+    return IndividualShiftPatchRequestFromJSONTyped(json, false);
+}
+
+export function IndividualShiftPatchRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): IndividualShiftPatchRequest {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'data': json['data'],
+    };
+}
+
+export function IndividualShiftPatchRequestToJSON(value?: IndividualShiftPatchRequest | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'data': value.data,
+    };
+}
+
+
