# src/Swagger/models/IndividualShiftPatchResponse.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface IndividualShiftPatchResponse
+ */
+export interface IndividualShiftPatchResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof IndividualShiftPatchResponse
+     */
+    msg?: string | null;
+}
+
+export function IndividualShiftPatchResponseFromJSON(json: any): IndividualShiftPatchResponse {
+    return IndividualShiftPatchResponseFromJSONTyped(json, false);
+}
+
+export function IndividualShiftPatchResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): IndividualShiftPatchResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'msg': !exists(json, 'msg') ? undefined : json['msg'],
+    };
+}
+
+export function IndividualShiftPatchResponseToJSON(value?: IndividualShiftPatchResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'msg': value.msg,
+    };
+}
+
+
