# src/Swagger/models/index.ts
@@ -1,6 +1,8 @@
 export * from './AuthenticatedResponse';
 export * from './IndividualShiftDeleteResponse';
 export * from './IndividualShiftGetResponse';
+export * from './IndividualShiftPatchRequest';
+export * from './IndividualShiftPatchResponse';
 export * from './IndividualShiftPutRequest';
 export * from './IndividualShiftPutResponse';
 export * from './InferenceRequest';
